[package]
name = "serial" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["clueless_@live.co.uk"]

[lib]
crate-type = ["rlib"]
name = "serial"
path = "src/lib.rs"

[dependencies]
rlibc = "*"
pio = { git = "https://github.com/xClueless/pio-rs.git" }
